Fixed flickering on back cards but now theres some on the front lmao

--- a/public/css/flip.css
+++ b/public/css/flip.css
@@ -3,17 +3,13 @@
 /* entire container, keeps perspective */
 .flip-container {
   perspective: 1000;
+  -webkit-perspective: 1000;
 }
 
 /*THIS IS THE CSS TO ADD TO FLIP!!! */
-  /*flip the pane when hovered */
-  .flip-container.buttonclicked .flipper, .flip-container.buttonclicked .flipper {
-    transform: rotateY(180deg);
+  .flip-container.buttonclicked .flipper {
+    transform: rotateY(179deg);
   } 
-
- /*   .flip-container:hover .flipper, .flip-container:hover .flipper {
-    transform: rotateY(180deg);
-  } */
 
 
 .flip-container, #front, #back {
@@ -43,5 +39,5 @@
 
 /* back, initially hidden pane */
 #back {
-  transform: rotateY(180deg);
+  transform: rotateY(179deg);
 }
