--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,13 +3,20 @@ div#startpage {
 }
 
 .flipper {
-  margin:150px;
+/*  margin:150px;
   background: #F4F7D9;
   color: #3E423A;
   padding-bottom: 50px;
   padding-top: 50px;
   border-radius: 20px;
-  border-bottom: 5px solid #D1D4BA;
+  border-bottom: 5px solid #D1D4BA;*/
+}
+
+#back {
+  background: #F4F7D9;
+}
+#front {
+  background: #F4F7D9;
 }
 
 div.flip-container div.row {
@@ -17,8 +24,15 @@ div.flip-container div.row {
 }
 
 div#theTWEET {
-padding-left: 20px;
-padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin:150px;
+  background: #F4F7D9;
+  color: #3E423A;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  border-radius: 20px;
+  border-bottom: 5px solid #D1D4BA;
 }
 
 
